--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".MainActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,10 +23,17 @@
                 android:value=".SearchResultsActivity" />
 
         </activity>
-        <activity android:name=".NewAlimentoActivity" />
-        <activity android:name=".CalcActivity" />
+        <activity android:name=".NewAlimentoActivity"
+                  android:screenOrientation="portrait" />
 
-        <activity android:name=".SearchResultsActivity">
+        <activity android:name=".CalcActivity"
+                  android:screenOrientation="portrait" />
+
+        <activity android:name=".FirstAccess"
+                  android:screenOrientation="portrait" />
+
+        <activity android:name=".SearchResultsActivity"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
