Criado tela de Nova Refeição, adicionado campo Meta Glicemica na config inicial

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
         <activity android:name=".FirstAccess"
                   android:screenOrientation="portrait" />
 
+        <activity android:name=".NewRefeicao"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".SearchResultsActivity"
                   android:screenOrientation="portrait">
             <intent-filter>
