Mudanças diversas: ajustes, configuração da TipoRefeicaoActivity e construção de Bundles

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,7 @@
                 android:resource="@xml/searchable" />
         </activity>
         <activity android:name=".DetalhesRefeicaoActivity"></activity>
+        <activity android:name=".TipoRefeicaoActivity"></activity>
     </application>
 
 </manifest>
