Mudanças diversas: Todas telas funcionais

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
         </activity>
         <activity android:name=".DetalhesRefeicaoActivity"></activity>
         <activity android:name=".TipoRefeicaoActivity"></activity>
+        <activity android:name=".SelecaoActivity"></activity>
     </application>
 
 </manifest>
