Config do BD ao usuario e Sistema para manter dados da Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
                   android:screenOrientation="portrait" />
 
         <activity android:name=".CalcActivity"
-                  android:screenOrientation="portrait" />
+                  android:screenOrientation="portrait"
+            android:parentActivityName=".NewRefeicao"/>
 
         <activity android:name=".FirstAccess"
                   android:screenOrientation="portrait" />
