Adicionado codificação classe configuraçõesActivity; adicionado activity configurações no AndroidManifest; Botões da tela principal invertidos (agora ta certo!)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,6 +34,9 @@
         <activity android:name=".NewRefeicao"
             android:screenOrientation="portrait" />
 
+        <activity android:name=".ConfiguracoesActivity"
+            android:screenOrientation="portrait" />
+
         <activity android:name=".SearchResultsActivity"
                   android:screenOrientation="portrait">
 
