--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 *.iml
-.gradle
+/.gradle
+/_windows
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
@@ -8,3 +9,7 @@
 /captures
 .externalNativeBuild
 /Diabytes
+IntelliLang.xml
+gradle.properties
+web-browsers.xml
+
